--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,16 @@ html {
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     font-family: helvetica, arial, sans;
+    min-height: 100vh;
+}
+
+.content-container {
+    flex-grow: 1;
+    padding-top: 10vh;
+    width: 100%;
 }
 
 h1 {
@@ -13,11 +22,20 @@ h1 {
     margin-top: 0;
 }
 
-a {
-    color: #f00;
+h2 {
+    font-size: 2em;
 }
 
-h2 + p {
+a {
+    color: #6397b5;
+}
+
+p {
+    line-height: 1.5;
+    margin: 0.75em 0;
+}
+
+h2 ~ p {
     font-size: 0.8em;
     font-style: italic;
     margin: 1em auto 0;
@@ -97,6 +115,7 @@ h2 + p {
     text-decoration: none;
     text-transform: uppercase;
 }
+
 .nav-links a:hover,
 .nav-links a:active {
     color: #ed6e2f;
@@ -127,6 +146,7 @@ h2 + p {
     display: inline-block;
     margin: 2em 1em 0;
 }
+
 .footer-nav a {
     color: #ccc;
 }
@@ -134,7 +154,52 @@ h2 + p {
 /* HERO STYLES */
 .full-hero {
     background-color: #c7dbfc;
-    height: 50vh;
+    background-size: cover;
+    box-sizing: border-box;
+    height: 100vh;
+    padding-top: 10vh;
+}
+
+.full-hero:after {
+    bottom: 2vh;
+    border: 10px solid;
+    border-color: #fff transparent transparent;
+    content: "";
+    height: 0;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, 0);
+    width: 0;
+}
+
+.hero-home {
+    background-image: url(/images/shark.jpg);
+    background-position: center;
+}
+
+.hero-content {
+    color: #fff;
+    position: relative;
+    text-align: center;
+    text-transform: uppercase;
+    top: 50%;
+    transform: translate(0, -50%);
+}
+
+.hero-content h1 {
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 7vw;
+    margin-bottom: 0.25em;
+}
+
+.hero-content .social-link {
+    background-color: rgba(255, 255, 255, 0.8);
+    color: #557c83;
+}
+
+.hero-content .social-link:hover {
+    background-color: #000;
+    color: #fff;
 }
 
 /* SOCIAL STYLES */
@@ -171,6 +236,38 @@ h2 + p {
     margin: 0 0.5em;
 }
 
+.home-section {
+    margin: 6rem auto;
+    max-width: 980px;
+    width: 90vw;
+}
+
+.home-section h2 {
+    margin-bottom: 1.5rem;
+    text-align: center;
+}
+
+.home-callout {
+    align-items: center;
+    background-color: #000;
+    color: #fff;
+    display: flex;
+    padding: 7vh 0;
+}
+
+.callout-title {
+    flex: 1;
+    font-size: 5.75vw;
+    text-align: right;
+    text-transform: uppercase;
+}
+
+.callout-copy {
+    flex: 0 0 45em;
+    font-size: 0.8rem;
+    padding: 0 3vw;
+}
+
 /* BIO STYLES */
 .bio-wrapper {
     font-size: 24px;
@@ -180,13 +277,12 @@ h2 + p {
 }
 
 .bio-box {
-    border: 1px solid black;
     box-sizing: border-box;
     float: left;
     font-size: 1rem;
-    margin: 40px 1% 0;
-    padding: 2%;
-    width: 23%;
+    margin: 6rem 0 0;
+    padding: 0 3%;
+    width: 33%;
 }
 
 .bio-box h3 {
@@ -194,6 +290,7 @@ h2 + p {
     font-size: 1.5em;
     margin: -40px 0 1em;
     text-align: center;
+    text-transform: uppercase;
 }
 
 .bio-box img {
@@ -202,12 +299,11 @@ h2 + p {
 
 .bio-box .social-link {
     display: block;
-    margin: 2em 0 1em;
+    margin: 2em auto 1em;
 }
 
 .bio-copy {
-    font-size: 1em;
-    line-height: 1.5;
+    font-size: 0.75em;
 }
 
 .bio-copy a {
