--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,11 @@
 <head>
     <title>Test Page: Don't Panic</title>
     <meta charset="utf-8">
+    <link href="/favicon.png" rel="icon">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:100"
+          rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+          integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
 </head>
