--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,11 @@
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
+
+    <script src="/js/gallery.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            activateGallery();
+        });
+    </script>
 </head>
